# xgeom.plugin

./: .gitignore  CMakeLists.txt
Plugin.config/: resource_pipeline.config.txt
source/: xgeom.h  xgeom_rsc_descriptor.h  xgeom_xgpu_rsc_loader.h
source/Compiler/: main.cpp  xgeom_compiler.cpp
